# ProyectoInformatica

./: .gitmodules  Address.hpp  Administrator.cpp  Administrator.hpp  ListaDeClases.txt  MejorasImplementadas.txt  Order.hpp  PrivateUserData.cpp  PrivateUserData.hpp  ProyectoInformatica.pro  PublicUserData.cpp  PublicUserData.hpp  README.md  UML_gonzalovaca  User.cpp  User.hpp  UsoGitCmmdLine  main.cpp
Clases/: Address.hpp  Administrator.cpp  CreditCard.cpp  CreditCard.hpp  (+17 more)
Proyecto/tests/: CMakeCache.txt  CMakeLists.txt  CompuGlobalHyperMegaComponents  Makefile  test_basic  test_basic.cpp  test_orders
Proyecto/tests/.cmake/api/v1/reply/: cache-v2-de1df116364cbe701ec2.json  cmakeFiles-v1-5ba3448bc90c32dadfdf.json  codemodel-v2-6828f9b6ef96a3c6a012.json  index-2021-04-20T09-04-10-0993.json  target-gmock-Debug-c9503ee4d1a861132a5d.json  target-gmock_main-Debug-6d992cbdc1d0249ebfba.json  target-gtest-Debug-d1f4a2c4e7742f728621.json  target-gtest_main-Debug-63f7412fed478a6aac93.json  target-test_basic-Debug-1914a16eddd3cc9f7722.json
Proyecto/tests/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Proyecto/tests/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Proyecto/tests/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Proyecto/tests/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Proyecto/tests/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
Proyecto/tests/tests/: Makefile  test_basic
(+304 files in other folders)
